--- a/ContactManager/App.config
+++ b/ContactManager/App.config
@@ -3,4 +3,16 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="BasicHttpBinding_IContactService" />
+            </basicHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://localhost:59221/ContactService.svc"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IContactService"
+                contract="ContactService.IContactService" name="BasicHttpBinding_IContactService" />
+        </client>
+    </system.serviceModel>
 </configuration>
