Koniec trzeciego dnia

--- a/ContactManager/App.config
+++ b/ContactManager/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
@@ -6,13 +6,19 @@
     <system.serviceModel>
         <bindings>
             <basicHttpBinding>
-                <binding name="BasicHttpBinding_IContactService" />
+                <binding name="BasicHttpBinding_IContactService" maxReceivedMessageSize="2147483647" />
             </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:59221/ContactService.svc"
-                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IContactService"
-                contract="ContactService.IContactService" name="BasicHttpBinding_IContactService" />
+            <endpoint address="http://localhost:59221/ContactService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IContactService" contract="ContactService.IContactService" name="BasicHttpBinding_IContactService" />
         </client>
     </system.serviceModel>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.6.2.0" newVersion="4.6.2.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
